--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
           }
 
           //生成文字方便預覽
-          var text = generateText();
+          var text = this.generateText();
 
           if (this.checkOrderTime()) {
             const ok = confirm("確認是否送出訂單!");
