--- a/index.html
+++ b/index.html
@@ -114,12 +114,9 @@
       <!-- 功能按鈕 -->
       <div class="mt-4 row g-2">
         <!-- 第一列：生成文字按鈕 -->
-        <div class="col-12 d-flex justify-content-between">
-          <button class="btn btn-primary w-45" @click="generateText()">
+        <div class="col-12">
+          <button class="btn btn-primary w-100" @click="generateText()">
             生成文字並複製
-          </button>
-          <button class="btn btn-warning w-45" @click="SendOrder()">
-            送出訂單
           </button>
         </div>
 
