--- a/order.html
+++ b/order.html
@@ -1,28 +1,57 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>手動訂單收集器</title>
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
+    .card {
+      border-radius: .75rem;
+      box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15);
+    }
+    textarea {
+      resize: vertical;
+      font-family: ui-monospace, Menlo, Monaco, Consolas;
+    }
+  </style>
 </head>
-
-<body class="p-4 bg-light">
-
-  <h1 class="mb-3 mt-5 text-center">手動訂單收集器</h1>
-  <div x-data="textToJsonConverter()" class="container">
-    <div class="mb-3 d-flex justify-content-between">
-      <button type="button" class="btn btn-primary fs-1" @click="pasteFromClipboard()">貼上</button>
-      <button type="button" class="btn btn-danger fs-1" @click="reset()">重置</button>
-    </div>
-
-
-    <textarea x-model="inputText" class="form-control" placeholder="貼上文字格式資料" style="min-height: 60vh;"></textarea>
-
-
-    <div class="mt-3 d-flex justify-content-center">
-      <button class="btn btn-secondary fs-1" @click="sendOrder()">送出訂單</button>
+<body x-data="textToJsonConverter()" class="py-5">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-lg-8">
+        <div class="card">
+          <div class="card-header text-center bg-white border-0 pb-0">
+            <h2 class="fw-bold">手動訂單收集器</h2>
+          </div>
+          <div class="card-body">
+            <div class="d-flex justify-content-end gap-2 mb-3">
+              <button type="button" class="btn btn-outline-primary" @click="pasteFromClipboard()">
+                貼上
+              </button>
+              <button type="button" class="btn btn-outline-danger" @click="reset()">
+                重置
+              </button>
+            </div>
+            <textarea x-model="inputText" class="form-control mb-3" placeholder="請在此貼上純文字格式的訂單資料" rows="20"></textarea>
+            <template x-if="jsonOutput">
+              <div class="mb-3">
+                <label class="form-label">JSON 預覽</label>
+                <textarea x-model="jsonOutput" class="form-control" rows="6" readonly></textarea>
+              </div>
+            </template>
+          </div>
+          <div class="card-footer bg-white border-0 text-center">
+            <button class="btn btn-primary btn-lg px-5" @click="sendOrder()">
+              送出訂單
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -36,81 +65,56 @@
           this.jsonOutput = '';
         },
         pasteFromClipboard() {
-          if (!navigator.clipboard || !navigator.clipboard.readText) {
+          if (!navigator.clipboard?.readText) {
             return alert('你的瀏覽器不支援 Clipboard API');
           }
           navigator.clipboard.readText()
-            .then(text => {
-              this.inputText = text;
-              // 如有自動縮放或其他邏輯，可手動觸發
-              this.adjustFont?.();
-            })
+            .then(text => this.inputText = text)
             .catch(err => {
               console.error(err);
               alert('讀取剪貼簿失敗：' + err);
             });
         },
-        async convert() {
-          const lines = this.inputText.split("\n").map(l => l.trim()).filter(l => l !== "");
-          const result = {
-            date: "",
-            partner: "",
-            items: []
-          };
-
+        convert() {
+          const lines = this.inputText.split('\n').map(l => l.trim()).filter(l => l);
+          const result = { date: '', partner: '', items: [] };
           for (let line of lines) {
-            if (line.startsWith("日期:")) {
-              result.date = line.replace("日期:", "").replace(";", "").trim();
-            } else if (line.startsWith("成員:")) {
-              result.partner = line.replace("成員:", "").replace(";", "").trim();
-            } else if (line.startsWith("【")) {
+            if (line.startsWith('日期:')) {
+              result.date = line.replace('日期:', '').replace(/;$/,'').trim();
+            } else if (line.startsWith('成員:')) {
+              result.partner = line.replace('成員:', '').replace(/;$/,'').trim();
+            } else if (line.startsWith('【')) {
               const match = line.match(/【(.+?)】:(\d+);?/);
-              if (match) {
-                result.items.push({
-                  name: match[1],
-                  count: parseInt(match[2])
-                });
-              }
+              if (match) result.items.push({ name: match[1], count: +match[2] });
             }
           }
-
           this.jsonOutput = JSON.stringify(result, null, 2);
         },
         async sendOrder() {
-          await this.convert();
-          this.merge(this.jsonOutput);
-        },
-        async merge(patch) {
-          let obj;
+          this.convert();
+          let payload;
           try {
-            obj = JSON.parse(patch);
-          } catch (e) {
-            return;
+            payload = JSON.parse(this.jsonOutput);
+          } catch {
+            return alert('資料格式不正確，無法送出');
           }
           try {
             const res = await fetch('/.netlify/functions/updateData', {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify(obj)
+              body: JSON.stringify(payload)
             });
             const result = await res.json();
-
-            if (!res.ok || !result.success) {
-              throw new Error(result.message || res.statusText);
-            }
+            if (!res.ok || !result.success) throw new Error(result.message || res.statusText);
             alert('已送出訂單！');
+            this.reset();
           } catch (e) {
-            alert("訂單送出失敗！");
-          } finally {
+            console.error(e);
+            alert('訂單送出失敗：' + e.message);
           }
-        },
-
-
-
+        }
       };
     }
   </script>
-
 </body>
-
 </html>
