--- a/order.html
+++ b/order.html
@@ -7,17 +7,9 @@
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    body {
-      background-color: #f8f9fa;
-    }
-    .card {
-      border-radius: .75rem;
-      box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15);
-    }
-    textarea {
-      resize: vertical;
-      font-family: ui-monospace, Menlo, Monaco, Consolas;
-    }
+    body { background-color: #f8f9fa; }
+    .card { border-radius: .75rem; box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15); }
+    textarea { resize: vertical; font-family: ui-monospace, Menlo, Monaco, Consolas; }
   </style>
 </head>
 <body x-data="textToJsonConverter()" class="py-5">
@@ -30,25 +22,13 @@
           </div>
           <div class="card-body">
             <div class="d-flex justify-content-end gap-2 mb-3">
-              <button type="button" class="btn btn-outline-primary" @click="pasteFromClipboard()">
-                貼上
-              </button>
-              <button type="button" class="btn btn-outline-danger" @click="reset()">
-                重置
-              </button>
+              <button type="button" class="btn btn-outline-primary" @click="pasteFromClipboard()">貼上</button>
+              <button type="button" class="btn btn-outline-danger" @click="reset()">重置</button>
             </div>
-            <textarea x-model="inputText" class="form-control mb-3" placeholder="請在此貼上純文字格式的訂單資料" rows="20"></textarea>
-            <template x-if="jsonOutput">
-              <div class="mb-3">
-                <label class="form-label">JSON 預覽</label>
-                <textarea x-model="jsonOutput" class="form-control" rows="6" readonly></textarea>
-              </div>
-            </template>
+            <textarea x-model="inputText" class="form-control mb-3" placeholder="請在此貼上純文字格式的訂單資料" rows="10"></textarea>
           </div>
           <div class="card-footer bg-white border-0 text-center">
-            <button class="btn btn-primary btn-lg px-5" @click="sendOrder()">
-              送出訂單
-            </button>
+            <button class="btn btn-primary btn-lg px-5" @click="sendOrder()">送出訂單</button>
           </div>
         </div>
       </div>
@@ -59,10 +39,8 @@
     function textToJsonConverter() {
       return {
         inputText: '',
-        jsonOutput: '',
         reset() {
           this.inputText = '';
-          this.jsonOutput = '';
         },
         pasteFromClipboard() {
           if (!navigator.clipboard?.readText) {
@@ -88,16 +66,10 @@
               if (match) result.items.push({ name: match[1], count: +match[2] });
             }
           }
-          this.jsonOutput = JSON.stringify(result, null, 2);
+          return result;
         },
         async sendOrder() {
-          this.convert();
-          let payload;
-          try {
-            payload = JSON.parse(this.jsonOutput);
-          } catch {
-            return alert('資料格式不正確，無法送出');
-          }
+          const payload = this.convert();
           try {
             const res = await fetch('/.netlify/functions/updateData', {
               method: 'POST',
