--- a/total.html
+++ b/total.html
@@ -10,6 +10,11 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
+    <style>
+    body { background-color: #f8f9fa; }
+    .card { border-radius: .75rem; box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15); }
+    textarea { resize: vertical; font-family: ui-monospace, Menlo, Monaco, Consolas; }
+  </style>
 
   <!-- 先做密碼驗證，通過後再動態載入 Alpine.js -->
   <script>
@@ -81,7 +86,7 @@
           </div>
         </template>
       </div>
-      <div class="col-auto d-flex align-items-center">
+      <!-- <div class="col-auto d-flex align-items-center">
         <button
           class="btn btn-outline-secondary"
           @click="showOnlyWithCount = !showOnlyWithCount"
@@ -90,11 +95,11 @@
             x-text="showOnlyWithCount ? '顯示全部' : '只看有數量'"
           ></span>
         </button>
-      </div>
+      </div> -->
     </div>
 
     <!-- 餅類 -->
-    <h4>餅類</h4>
+    <!-- <h4>餅類</h4>
     <table class="table table-bordered text-center">
       <thead class="table-light">
         <tr>
@@ -134,10 +139,10 @@
           </td>
         </tr>
       </tfoot>
-    </table>
+    </table> -->
 
     <!-- 零食類 -->
-    <h4>零食類</h4>
+    <!-- <h4>零食類</h4>
     <table class="table table-bordered text-center">
       <thead class="table-light">
         <tr>
@@ -177,12 +182,12 @@
           </td>
         </tr>
       </tfoot>
-    </table>
+    </table> -->
 
     <!-- 總計 -->
-    <div class="text-end mt-4">
+    <!-- <div class="text-end mt-4">
       <h4>總計：<span x-text="calculateTotal().toFixed(2)"></span></h4>
-    </div>
+    </div> -->
 
     <!-- 生成文字 -->
     <div class="text-center mt-4">
@@ -287,11 +292,7 @@
         calculateTotal() {
           return this.calculateGroup9Total() + this.calculateOtherGroupsTotal();
         },
-        generateText() {
-            if(this.selectedPartners.length != 1) {
-              alert("請選擇成員");
-              return;
-            }
+        generateText() {          
           let text =
             "日期: " +
             new Date().toLocaleDateString() +
