--- a/total.html
+++ b/total.html
@@ -262,7 +262,7 @@
           },
           generateText() {
             // 把所有成員用「、」分隔，如果陣列空的話就會得到空字串
-            const members = this.selectedPartners.join('、');
+            const members = this.partnerOptions.join('、');
 
             let text =
               "日期: " +
