--- a/total.html
+++ b/total.html
@@ -80,7 +80,7 @@
     </div>
 
     <!-- 餅類 -->
-    <h4>餅類</h4>
+    <!-- <h4>餅類</h4>
     <table class="table table-bordered text-center">
       <thead class="table-light">
         <tr>
@@ -115,10 +115,10 @@
           </td>
         </tr>
       </tfoot>
-    </table>
+    </table> -->
 
     <!-- 零食類 -->
-    <h4>零食類</h4>
+    <!-- <h4>零食類</h4>
     <table class="table table-bordered text-center">
       <thead class="table-light">
         <tr>
@@ -153,12 +153,12 @@
           </td>
         </tr>
       </tfoot>
-    </table>
+    </table> -->
 
     <!-- 總計 -->
-    <div class="text-end mt-4">
+    <!-- <div class="text-end mt-4">
       <h4>總計：<span x-text="calculateTotal().toFixed(2)"></span></h4>
-    </div>
+    </div> -->
 
     <!-- 生成文字 -->
     <div class="text-center mt-4">
