--- a/total.html
+++ b/total.html
@@ -72,11 +72,11 @@
           </div>
         </template>
       </div>
-      <div class="col-auto d-flex align-items-center">
+      <!-- <div class="col-auto d-flex align-items-center">
         <button class="btn btn-outline-secondary" @click="showOnlyWithCount = !showOnlyWithCount">
           <span x-text="showOnlyWithCount ? '顯示全部' : '只看有數量'"></span>
         </button>
-      </div>
+      </div> -->
     </div>
 
     <!-- 餅類 -->
