--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
       <ol class="text-danger m-2">
         <li>
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
+        </li>      
+        <li>
+          回復上一版
         </li>
       </ol>
 
@@ -344,7 +347,7 @@
           this.$refs.outputText.value = text;
           this.copyToClipboard();
           this.sendToGmail(text);
-          
+
           return text;
         },
 
