--- a/order.html
+++ b/order.html
@@ -109,20 +109,20 @@
         async sendOrder() {
           const payload = this.parseLines();
           console.log('Parsed Payload:', JSON.stringify(payload));
-          // try {
-          //   const res = await fetch('/.netlify/functions/updateData', {
-          //     method: 'POST',
-          //     headers: { 'Content-Type': 'application/json' },
-          //     body: JSON.stringify(payload)
-          //   });
-          //   const result = await res.json();
-          //   if (!res.ok || !result.success) throw new Error(result.message || res.statusText);
-          //   alert('已送出訂單！');
-          //   this.reset();F
-          // } catch (e) {
-          //   console.error(e);
-          //   alert('訂單送出失敗：' + e.message);
-          // }
+           try {
+             const res = await fetch('/.netlify/functions/updateData', {
+               method: 'POST',
+               headers: { 'Content-Type': 'application/json' },
+               body: JSON.stringify(payload)
+             });
+             const result = await res.json();
+             if (!res.ok || !result.success) throw new Error(result.message || res.statusText);
+             alert('已送出訂單！');
+             this.reset();F
+           } catch (e) {
+             console.error(e);
+             alert('訂單送出失敗：' + e.message);
+           }
         }
       };
     }
