增加商品的公告

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>      
         <li>
-          回復上一版
+          增加商品 : 凍干草苺雪Q餅(袋)
         </li>
       </ol>
 
