增加商品公告

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
       <ol class="text-danger m-2">
         <li>
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
-        </li>      
-        <li>
-          增加商品 : 凍干草苺雪Q餅(袋)
         </li>
+        <li>增加商品 : 梅子夾芒果</li>
+        <li>增加商品 : 愛馬仕地瓜乾</li>
+        <li> 增加商品 : 蘋果乾</li>
       </ol>
 
       <!-- 功能按鈕 -->
