--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
         <li>
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>
-        <li>增加商品 : 梅子夾芒果</li>
-        <li>增加商品 : 愛馬仕地瓜乾</li>
-        <li> 增加商品 : 蘋果乾</li>
+        <li> 增加夥伴 : 北八</li>
       </ol>
 
       <!-- 功能按鈕 -->
@@ -131,6 +129,7 @@
             <option value="北四">北四</option>
             <option value="北五">北五</option>
             <option value="北六">北六</option>
+            <option value="北八">北八</option>
             <option value="南一">南一</option>
             <option value="南二">南二</option>
             <option value="南三">南三</option>
