修改商品價格

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>
         <li> 增加夥伴 : 北八</li>
+        <li> 修改蘋果乾價格 => 2000</li>
+        <li> 修改駱奶價格 => 4010</li>
       </ol>
 
       <!-- 功能按鈕 -->
