新增公告訊息

--- a/index.html
+++ b/index.html
@@ -106,9 +106,8 @@
         <li>
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>
-        <li> 增加夥伴 : 北八</li>
-        <li> 修改蘋果乾價格 => 2000</li>
-        <li> 修改駱奶價格 => 4010</li>
+        <li> 新增商品: 綜合堅果(包)、愛心袋(包)、零食包裝袋(包)</li>
+        <li> 刪除商品: 新年夾鏈袋 、 牛皮袋</li>
       </ol>
 
       <!-- 功能按鈕 -->
