修改蘋果乾的價格

--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
         <li>
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>
-        <li> 新增商品: 綜合堅果(包)、愛心袋(包)、零食包裝袋(包)</li>
-        <li> 刪除商品: 新年夾鏈袋 、 牛皮袋</li>
+        <li> 商品價格修改: 蘋果乾 2000元 => 2330 元</li>
       </ol>
 
       <!-- 功能按鈕 -->
