更新商品公告

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
         <li>
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>
-        <li> 商品價格修改: 蘋果乾 2000元 => 2330 元</li>
+        <li> 商品價格修改: 駝奶 4010元 => 4060 元</li>
+        <li> 商品價格修改: 原味葡萄梅子 5260 元 => 5845 元</li>
       </ol>
 
       <!-- 功能按鈕 -->
