新增成員 及 修改公告

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
         </li>
         <li> 商品價格修改: 駝奶 4010元 => 4060 元</li>
         <li> 商品價格修改: 原味葡萄梅子 5260 元 => 5845 元</li>
+        <li> 商品價格修改: 紅棗加核桃 3100 元 => 3125 元</li>
+        <li> 增加成員: 華姐</li>
       </ol>
 
       <!-- 功能按鈕 -->
@@ -140,6 +142,7 @@
             <option value="阿邦">阿邦</option>
             <option value="小妹">小妹</option>
             <option value="小小妹">小小妹</option>
+            <option value="華姐">華姐</option>
           </select>
         </div>
 
