--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
             <option value="北五">北五</option>
             <option value="北六">北六</option>
             <option value="北八">北八</option>
+            <option value="北九">北九</option>
             <option value="北十">北十</option>
             <option value="南一">南一</option>
             <option value="南二">南二</option>
