--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <li> 商品價格修改: 駝奶 4010元 => 4060 元</li>
         <li> 商品價格修改: 原味葡萄梅子 5260 元 => 5845 元</li>
         <li> 商品價格修改: 紅棗加核桃 3100 元 => 3125 元</li>
-        <li> 增加成員: 華姐 、 北十</li>
+        <li> 增加成員: 華姐 、 北十、 北十一</li>
       </ol>
 
       <!-- 功能按鈕 -->
@@ -135,6 +135,7 @@
             <option value="北八">北八</option>
             <option value="北九">北九</option>
             <option value="北十">北十</option>
+            <option value="北十一">北十一</option>
             <option value="南一">南一</option>
             <option value="南二">南二</option>
             <option value="南三">南三</option>
