--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <li> 商品價格修改: 原味葡萄梅子 5260 元 => 5845 元</li>
         <li> 商品價格修改: 紅棗加核桃 3100 元 => 3125 元</li>
         <li> 增加成員: 華姐 、 北十、 北十一</li>
+        <li> 修改成員名稱: 小小妹 => 菁洳</li>
       </ol>
 
       <!-- 功能按鈕 -->
@@ -144,7 +145,7 @@
             <option value="小蝦米">小蝦米</option>
             <option value="阿邦">阿邦</option>
             <option value="小妹">小妹</option>
-            <option value="小小妹">小小妹</option>
+            <option value="菁洳">菁洳</option>
             <option value="華姐">華姐</option>
             <option value="姑姑">姑姑</option>
           </select>
