--- a/index.html
+++ b/index.html
@@ -106,11 +106,8 @@
         <li>
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>
-        <li> 商品價格修改: 駝奶 4010元 => 4060 元</li>
-        <li> 商品價格修改: 原味葡萄梅子 5260 元 => 5845 元</li>
-        <li> 商品價格修改: 紅棗加核桃 3100 元 => 3125 元</li>
-        <li> 增加成員: 華姐 、 北十、 北十一</li>
-        <li> 修改成員名稱: 小小妹 => 菁洳</li>
+        <li> 商品價格修改: 龜苓膏(箱) 1900 元 => 2000 元</li>
+        <li> 增加商品: 花生酥(袋)</li>
       </ol>
 
       <!-- 功能按鈕 -->
