--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
         <li> 商品價格修改: 駝奶 4010元 => 4060 元</li>
         <li> 商品價格修改: 原味葡萄梅子 5260 元 => 5845 元</li>
         <li> 商品價格修改: 紅棗加核桃 3100 元 => 3125 元</li>
+        <li> 增加商品: 白胡椒薄餅</li>
         <li> 增加成員: 華姐 、 北十、 北十一</li>
       </ol>
 
