--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         <li> 增加成員: 華姐 、 北十、 北十一</li>
         <li> 商品價格修改: 龜苓膏(箱) 1900 元 => 2000 元</li>
         <li> 增加商品: 花生酥(袋)</li>
+        <li> 預設勾選 <strong>運費(北部)</strong></li>
       </ol>
 
       <!-- 功能按鈕 -->
@@ -248,7 +249,13 @@
                 // 從 savedData.items 裡找對應 product_name
                 const saved = savedData.items?.[item.product_name] || {};
                 const count = saved.count || 0;
-                const checked = saved.checked || false;
+                let checked = saved.checked || false;
+                
+                // 預設運費(北部)為勾選狀態
+                if (item.product_name === "運費(北部)") {
+                  checked = saved.checked !== undefined ? saved.checked : true;
+                }
+                
                 const total = count * item.price;
 
                 return {
