--- a/index.html
+++ b/index.html
@@ -106,12 +106,7 @@
         <li>
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>
-        <li> 增加商品: 白胡椒薄餅</li>
-        <li> 增加成員: 華姐 、 北十、 北十一</li>
-        <li> 商品價格修改: 龜苓膏(箱) 1900 元 => 2000 元</li>
-        <li> 增加商品: 花生酥(袋)</li>
-        <li> 增加產品: 花茶(包)</li>
-        <li> 增加成員: 小甯</li>
+        <li> 商品價格修改: 葡萄梅子(陳皮) 5260 元 => 5845 元</li>
       </ol>
 
       <!-- 功能按鈕 -->
