--- a/index.html
+++ b/index.html
@@ -106,7 +106,12 @@
         <li>
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>
-        <li> 商品價格修改: 葡萄梅子(陳皮) 5260 元 => 5845 元</li>
+        <li> 商品價格修改: 紅棗加核桃 3125 元 => 3275 元</li>
+        <li> 商品價格修改: 大片酥餅 960 元 => 990 元</li>
+        <li> 商品價格修改: 小片酥餅 960 元 => 990 元</li>
+        <li> 商品價格修改: 雪花糕 90 元 => 95 元</li>
+        <li> 商品價格修改: 麵茶 70 元 => 75 元</li>
+        <li> 商品價格修改: 鳳凰酥 160 元 => 175 元</li>
       </ol>
 
       <!-- 功能按鈕 -->
