修改產品價格

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         <li> 商品價格修改: 雪花糕 90 元 => 95 元</li>
         <li> 商品價格修改: 麵茶 70 元 => 75 元</li>
         <li> 商品價格修改: 鳳凰酥 160 元 => 175 元</li>
+        <li> 商品價格修改: 筷子肉乾 1325 元 => 1400 元</li>
       </ol>
 
       <!-- 功能按鈕 -->
